--- a/BaselineExperiments/feature_sel_cross.ipynb
+++ b/BaselineExperiments/feature_sel_cross.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,19 +14,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000 reviews per class from ../Data/amazon_phone.pkl loaded\n"
+      "5000 reviews per class from ../Data/amazon_phone.pkl loaded\n",
+      "######## RUN SVC\n",
+      "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n",
+      "best parameters\n",
+      "{'kbest': SelectKBest(k=500, score_func=<function f_regression at 0x000002E2C9FD8168>), 'kbest__k': 500}\n",
+      "best score\n",
+      "0.3362702395643572\n",
+      "    kbest__k                                              kbest  f1_macro\n",
+      "0        500                                                NaN  0.317044\n",
+      "1       1000                                                NaN       NaN\n",
+      "2       1500                                                NaN       NaN\n",
+      "3       2000                                                NaN       NaN\n",
+      "4       2500                                                NaN       NaN\n",
+      "5       3000                                                NaN       NaN\n",
+      "6       3500                                                NaN       NaN\n",
+      "7       4000                                                NaN       NaN\n",
+      "8       4500                                                NaN       NaN\n",
+      "9       5000                                                NaN       NaN\n",
+      "10       500  SelectKBest(k=500, score_func=<function f_regr...  0.336270\n",
+      "11      1000  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "12      1500  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "13      2000  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "14      2500  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "15      3000  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "16      3500  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "17      4000  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "18      4500  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "19      5000  SelectKBest(k=500, score_func=<function f_regr...       NaN\n",
+      "20       500  SelectKBest(score_func=<function mutual_info_c...  0.283130\n",
+      "21      1000  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "22      1500  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "23      2000  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "24      2500  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "25      3000  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "26      3500  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "27      4000  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "28      4500  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "29      5000  SelectKBest(score_func=<function mutual_info_c...       NaN\n",
+      "30       500  SelectKBest(score_func=<function chi2 at 0x000...  0.264941\n",
+      "31      1000  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "32      1500  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "33      2000  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "34      2500  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "35      3000  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "36      3500  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "37      4000  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "38      4500  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n",
+      "39      5000  SelectKBest(score_func=<function chi2 at 0x000...       NaN\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 185 out of 200 | elapsed:    2.0s remaining:    0.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 200 out of 200 | elapsed:    3.9s finished\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import random\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.svm import SVC, SVR\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.feature_selection import SelectKBest, chi2, f_classif, f_regression, mutual_info_classif\n",
+    "from sklearn.feature_selection import SelectKBest, chi2, f_classif, f_regression, mutual_info_classif, chi2\n",
     "\n",
     "\n",
     "amazon_link = '../Data/amazon_phone.pkl'\n",
@@ -85,7 +141,6 @@
     "\n",
     "\n",
     "df = load_sampled(amazon_link, 5000)\n",
-    "df = df.sample(frac=0.01)\n",
     "target = df.label\n",
     "text = df.text_prep\n",
     "\n",
@@ -100,72 +155,16 @@
     "}, {\n",
     "    'kbest': [SelectKBest(mutual_info_classif)],\n",
     "    'kbest__k': [500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500, 5000]\n",
+    "}, {\n",
+    "    'kbest': [SelectKBest(chi2)],\n",
+    "    'kbest__k': [500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500, 5000]\n",
     "}]\n",
     "\n",
-    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=123)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "######## RUN SVC\n",
-      "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n",
-      "best parameters\n",
-      "{'kbest': SelectKBest(k=500,\n",
-      "            score_func=<function mutual_info_classif at 0x000002E2CA0DE4C8>), 'kbest__k': 500}\n",
-      "best score\n",
-      "0.29333297421532717\n",
-      "    kbest__k                                              kbest  f1_macro\n",
-      "0        500                                                NaN  0.250291\n",
-      "1       1000                                                NaN  0.244751\n",
-      "2       1500                                                NaN       NaN\n",
-      "3       2000                                                NaN       NaN\n",
-      "4       2500                                                NaN       NaN\n",
-      "5       3000                                                NaN       NaN\n",
-      "6       3500                                                NaN       NaN\n",
-      "7       4000                                                NaN       NaN\n",
-      "8       4500                                                NaN       NaN\n",
-      "9       5000                                                NaN       NaN\n",
-      "10       500  SelectKBest(score_func=<function f_regression ...  0.252468\n",
-      "11      1000  SelectKBest(score_func=<function f_regression ...  0.206292\n",
-      "12      1500  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "13      2000  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "14      2500  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "15      3000  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "16      3500  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "17      4000  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "18      4500  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "19      5000  SelectKBest(score_func=<function f_regression ...       NaN\n",
-      "20       500  SelectKBest(k=500,\\n            score_func=<fu...  0.293333\n",
-      "21      1000  SelectKBest(k=500,\\n            score_func=<fu...  0.292247\n",
-      "22      1500  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "23      2000  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "24      2500  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "25      3000  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "26      3500  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "27      4000  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "28      4500  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n",
-      "29      5000  SelectKBest(k=500,\\n            score_func=<fu...       NaN\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:    5.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:   13.1s finished\n"
-     ]
-    }
-   ],
-   "source": [
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=123)\n",
+    "\n",
+    "\n",
     "print('######## RUN SVC')\n",
-    "svc_pipeline = Pipeline([('vect', CountVectorizer()),\n",
+    "svc_pipeline = Pipeline([('vect', CountVectorizer(max_df=0.75, min_df=3, ngram_range=(1, 3))),\n",
     "                         ('kbest', kbest),\n",
     "                        ('clf', SVC(C=1.0, decision_function_shape='ovo', gamma='auto', kernel='linear', random_state=123))])\n",
     "gs_svc_pipeline = GridSearchCV(svc_pipeline, param_grid, scoring='f1_macro', cv=cv, verbose=3, n_jobs=-1)\n",
@@ -176,13 +175,7 @@
     "print(gs_svc_pipeline.best_score_)\n",
     "print(pd.concat([pd.DataFrame(gs_svc_pipeline.cv_results_[\"params\"]),pd.DataFrame(gs_svc_pipeline.cv_results_[\"mean_test_score\"], columns=[\"f1_macro\"])],axis=1))\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
