--- a/00_archive/BaselineExperiments/VADER_CellPhones.ipynb
+++ b/00_archive/BaselineExperiments/VADER_CellPhones.ipynb
@@ -369,7 +369,180 @@
     }
    ],
    "source": [
-    "corr = df.corr"
+    "from Scripts import loading as dl\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import plot_confusion_matrix, classification_report\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "def run(domain, trial, schema_rev_link, amazon_rev_link, schema_rev_size, amazon_rev_size):\n",
+    "    df = dl.load_merged_data(schema_rev_link, amazon_rev_link, schema_rev_size, amazon_rev_size)\n",
+    "\n",
+    "    text = df.text_prep\n",
+    "    target = df.label\n",
+    "\n",
+    "    seed = 7\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(text, target, test_size=0.25, random_state=seed,\n",
+    "                                                        stratify=df.label)\n",
+    "\n",
+    "    vect = TfidfVectorizer(binary=True, max_df=0.75, min_df=1, ngram_range=(1, 2))\n",
+    "    train_vectorized = vect.fit_transform(x_train)\n",
+    "    vocab = vect.get_feature_names()\n",
+    "\n",
+    "    test_vectorized = vect.transform(x_test)\n",
+    "\n",
+    "    # ToDo: adjust the SelectKBest\n",
+    "    vectorizer_fs = SelectKBest(score_func=f_classif, k=500)\n",
+    "    fs_train_vectorized = vectorizer_fs.fit_transform(train_vectorized, y_train)\n",
+    "    fs_test_vectorized = vectorizer_fs.transform(test_vectorized)\n",
+    "\n",
+    "    clf = SVC(C=1.0, decision_function_shape='ovo', gamma='auto', kernel='linear')\n",
+    "    clf.fit(fs_train_vectorized, y_train)\n",
+    "\n",
+    "    y_pred = clf.predict(fs_test_vectorized)\n",
+    "\n",
+    "    print(f\"######## RESULT: {domain}_{trial}_{schema_rev_size}_{amazon_rev_size}\")\n",
+    "    print(\"vocabulary size: \", len(vocab))\n",
+    "    accuracy = str(metrics.accuracy_score(y_test, y_pred))\n",
+    "    precision = str(metrics.precision_score(y_test, y_pred, average=\"macro\"))\n",
+    "    recall = str(metrics.recall_score(y_test, y_pred, average=\"macro\"))\n",
+    "    f1 = str(metrics.f1_score(y_test, y_pred, average=\"macro\"))\n",
+    "    print(\"Accuracy:\" + accuracy)\n",
+    "    print(\"Precision:\" + precision)\n",
+    "    print(\"Recall: \" + recall)\n",
+    "    print(\"F1:\" + f1)\n",
+    "    print(classification_report(y_test, y_pred, target_names=['class_1', 'class_2', 'class_3', 'class_4', 'class_5']))\n",
+    "    title = f\"{domain}_{trial}_{schema_rev_size}_{amazon_rev_size}\"\n",
+    "    disp = plot_confusion_matrix(clf, fs_test_vectorized, y_test,\n",
+    "                                 display_labels=[1.0, 2.0, 3.0, 4.0, 5.0],\n",
+    "                                 cmap=plt.cm.Blues)\n",
+    "    disp.ax_.set_title(title)\n",
+    "    plt.savefig(f'Results/test_series/{title}.png', dpi=200)\n",
+    "\n",
+    "    title_norm = title + \"_normalize\"\n",
+    "    disp_norm = plot_confusion_matrix(clf, fs_test_vectorized, y_test,\n",
+    "                                      display_labels=[1.0, 2.0, 3.0, 4.0, 5.0],\n",
+    "                                      cmap=plt.cm.Blues,\n",
+    "                                      normalize='true')\n",
+    "    disp_norm.ax_.set_title(title_norm)\n",
+    "    plt.savefig(f'Results/test_series/{title_norm}.png', dpi=200)\n",
+    "\n",
+    "    case_1 = 0\n",
+    "    case_2 = 0\n",
+    "    case_3 = 0\n",
+    "    case_4 = 0\n",
+    "    case_5 = 0\n",
+    "    case_6 = 0\n",
+    "    case_7 = 0\n",
+    "    case_8 = 0\n",
+    "    for (input_text, pred, label) in zip(x_test, y_pred, y_test):\n",
+    "        if pred == 3.0 and label in [1.0, 2.0, 4.0, 5.0]:\n",
+    "            case_1 += 1\n",
+    "        if pred in [1.0, 2.0, 4.0, 5.0] and label == 3.0:\n",
+    "            case_2 += 1\n",
+    "        if pred in [1.0, 2.0] and label in [4.0, 5.0]:\n",
+    "            case_3 += 1\n",
+    "        if pred in [4.0, 5.0] and label in [1.0, 2.0]:\n",
+    "            case_4 += 1\n",
+    "        if pred == 1.0 and label == 2.0:\n",
+    "            case_5 += 1\n",
+    "        if pred == 2.0 and label == 1.0:\n",
+    "            case_6 += 1\n",
+    "        if pred == 4.0 and label == 5.0:\n",
+    "            case_7 += 1\n",
+    "        if pred == 5.0 and label == 4.0:\n",
+    "            case_8 += 1\n",
+    "    print('case_1', 'case_2', 'case_3', 'case_4', 'case_5', 'case_6', 'case_7', 'case_8')\n",
+    "    print(case_1, case_2, case_3, case_4, case_5, case_6, case_7, case_8)\n",
+    "    print('')\n",
+    "    return f1\n",
+    "\n",
+    "\n",
+    "print('######### test series 1')\n",
+    "count_trial = '1'\n",
+    "limit = 1000\n",
+    "schema_size = 0\n",
+    "amazon_size = limit - schema_size\n",
+    "domains = ['phone', 'movie1']\n",
+    "for d in domains:\n",
+    "    amazon_link = f'../Data/amazon_{d}.pkl'\n",
+    "    schema_link = f'../Data/schema_{d}.pkl'\n",
+    "\n",
+    "    print(f\"######## {d}, test series {count_trial}\")\n",
+    "    results = {}\n",
+    "    while schema_size <= 1000:\n",
+    "        result = run(d, count_trial, schema_link, amazon_link, schema_size, amazon_size)\n",
+    "        results[f\"{d}_{count_trial}_{schema_size}_{amazon_size}\"] = result\n",
+    "\n",
+    "        schema_size = schema_size + 250\n",
+    "        amazon_size = limit - schema_size\n",
+    "\n",
+    "    bigIndex = max([[results[key], key] for key in results])\n",
+    "    print(f'######## BEST RESULTS of trial{count_trial}_{d}')\n",
+    "    print(bigIndex)\n",
+    "\n",
+    "    limit = 1000\n",
+    "    schema_size = 0\n",
+    "    amazon_size = limit - schema_size\n",
+    "\n",
+    "\n",
+    "print('######### test series 2')\n",
+    "count_trial = '2'\n",
+    "limit = 2000\n",
+    "schema_size = 1000\n",
+    "amazon_size = limit - schema_size\n",
+    "domains = ['phone', 'movie1']\n",
+    "for d in domains:\n",
+    "    amazon_link = f'../Data/amazon_{d}.pkl'\n",
+    "    schema_link = f'../Data/schema_{d}.pkl'\n",
+    "    print(f\"######## {d}, test series {count_trial}\")\n",
+    "    results = {}\n",
+    "    while schema_size < 2000:\n",
+    "        result = run(d, count_trial, schema_link, amazon_link, schema_size, amazon_size)\n",
+    "        results[f\"{d}_{count_trial}_{schema_size}_{amazon_size}\"] = result\n",
+    "\n",
+    "        schema_size = schema_size + 200\n",
+    "        amazon_size = limit - schema_size\n",
+    "\n",
+    "    bigIndex = max([[results[key], key] for key in results])\n",
+    "    print(f'######## BEST RESULTS of trial{count_trial}_{d}')\n",
+    "    print(bigIndex)\n",
+    "\n",
+    "    limit = 2000\n",
+    "    schema_size = 1000\n",
+    "    amazon_size = limit - schema_size\n",
+    "\n",
+    "\n",
+    "print('######### test series 3')\n",
+    "count_trial = '3'\n",
+    "limit = 10000\n",
+    "schema_size = 0\n",
+    "amazon_size = limit - schema_size\n",
+    "domains = ['phone', 'movie1']\n",
+    "for d in domains:\n",
+    "    amazon_link = f'../Data/amazon_{d}.pkl'\n",
+    "    schema_link = f'../Data/schema_{d}.pkl'\n",
+    "    print(f\"######## {d}, test series {count_trial}\")\n",
+    "    results = {}\n",
+    "    while schema_size <= 1000:\n",
+    "        result = run(d, count_trial, schema_link, amazon_link, schema_size, amazon_size)  # run everything\n",
+    "        results[f\"{d}_{count_trial}_{schema_size}_{amazon_size}\"] = result\n",
+    "\n",
+    "        schema_size = schema_size + 100\n",
+    "        amazon_size = limit - schema_size\n",
+    "\n",
+    "    bigIndex = max([[results[key], key] for key in results])\n",
+    "    print(f'######## BEST RESULTS of trial{count_trial}_{d}')\n",
+    "    print(bigIndex)\n",
+    "\n",
+    "    limit = 10000\n",
+    "    schema_size = 0\n",
+    "    amazon_size = limit - schema_size\n",
+    "print('finished!')\n"
    ],
    "metadata": {
     "collapsed": false,
